terraform/server-based/1-vpc.tf
########## VPC ##########
resource "aws_vpc" "resume_vpc" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "resume_vpc_terraform"
  }
}
